--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from keras.datasets import mnist"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"mnist_train.csv\")\n",
+    "test = pd.read_csv(\"mnist_test.csv\")"
    ]
   }
  ],
