--- a/main.ipynb
+++ b/main.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"mnist_train.csv\")\n",
-    "test = pd.read_csv(\"mnist_test.csv\")"
+    "train = pd.read_csv(\"dataset/mnist_train.csv\")\n",
+    "test = pd.read_csv(\"dataset/mnist_test.csv\")"
    ]
   }
  ],
