--- a/main.ipynb
+++ b/main.ipynb
@@ -4,20 +4,139 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-27 22:08:26.087404: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from keras.datasets import mnist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((array([[[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8),\n",
+       "  array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)),\n",
+       " (array([[[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         ...,\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]],\n",
+       "  \n",
+       "         [[0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          ...,\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0],\n",
+       "          [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8),\n",
+       "  array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train = pd.read_csv(\"dataset/mnist_train.csv\")\n",
-    "test = pd.read_csv(\"dataset/mnist_test.csv\")"
+    "mnist.load_data()"
    ]
   }
  ],
